# RISCVSimulator

./: CMakeLists.txt  Makefile
scripts/: binary_to_mif.py  mif_to_binary.py  mif_to_c.py
src/common/: charmap.mif  processor_api.h  start.cpp
src/common/ICMC/: ICMCConstants.h  ICMCProcessor.cpp  ICMCProcessor.h  bit_operations.h  icmc_ram.h
src/embedded/: libc.c  linking.ld  processor_api.c  start.asm
src/simulated/: RISCVSimulator.cpp  RISCVSimulator.h  main.cpp  processor_api.cpp
